Blog/Edit placeholdeleri elave etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -12,22 +12,22 @@
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title Aze">
+                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title Eng">
+                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title Ru">
+                            <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" required="" placeholder="Content Aze"></textarea>
+                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
