--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -15,32 +15,32 @@
                     <input type="hidden" name="imageId" value="@Model.ImageId" />
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleRu" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" class="form-control " id="ccomment"></textarea>
+                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment"></textarea>
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment"></textarea>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
