Description/Add-deki placeholderleri qeyd etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -32,12 +32,12 @@
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required="" placeholder="Content Eng"></textarea>
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required="" placeholder="Content Ru"></textarea>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
