--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
@@ -13,29 +13,25 @@
             </header>
             <div class="panel-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
-
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+                            <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="NameRu" id="f-name" class="form-control">
+                            <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="NameEn" id="f-name" class="form-control">
+                            <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                         </div>
                     </div>
-
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
                 </form>
@@ -43,3 +39,11 @@
         </section>
     </div>
 </div>
+
+@section scripts{
+    <script>
+        $(".cancel-button").click(function () {
+            window.location.href = "/ConstructionAdmin/Contact/Index";
+        })
+    </script>
+}
