--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -15,43 +15,36 @@
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="PortfolioId" value="@Model.PortfolioId" />
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+                            <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="NameRu" id="f-name" class="form-control">
+                            <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="NameEn" id="f-name" class="form-control">
+                            <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="ContentAz" id="f-name" class="form-control">
+                            <input type="text" asp-for="ContentAz" id="f-name" class="form-control" placeholder="Content AZE">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="ContentRu" id="f-name" class="form-control">
+                            <input type="text" asp-for="ContentEn" id="f-name" class="form-control" placeholder="Content ENG">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="text" asp-for="ContentEn" id="f-name" class="form-control">
+                            <input type="text" asp-for="ContentRu" id="f-name" class="form-control" placeholder="Content RU">
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
                             <select asp-for="PortfolioId">
                                 @foreach (var item in ViewBag.items)
@@ -62,21 +55,19 @@
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
                             <img src="@Model.ImagePath" alt="Alternate Text" />
                         </div>
                     </div>
                     <div class="form-group">
-
                         <div class="col-lg-10">
-                            <input type="file" name="file" id="f-name" class="form-control">
+                            <input type="file" name="file" id="f-name" class="form-control" placeholder="Images">
                         </div>
                     </div>
-
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
                 </form>
@@ -84,3 +75,11 @@
         </section>
     </div>
 </div>
+
+@section scripts{
+    <script>
+        $(".cancel-button").click(function () {
+            window.location.href = "/ConstructionAdmin/Contact/Index";
+        })
+    </script>
+}
