--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using ConstructionSite.DTO.AdminViewModels.About
 @using ConstructionSite.DTO.AdminViewModels.Description
 @using ConstructionSite.DTO.AdminViewModels.Portfolio
+@using ConstructionSite.DTO.AdminViewModels.Image
 @using ConstructionSite.DTO.AdminViewModels.Project
 @using ConstructionSite.DTO.AdminViewModels.Service
 @using ConstructionSite.DTO.AdminViewModels.SubService
