--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Image/About.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Image/About.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ConstructionSite.Entity.Models.About>
+﻿@model IEnumerable<AddAboutViewModel>
 @{
     ViewData["Title"] = "About";
 }
@@ -17,7 +17,7 @@
                                 <select class="form-control m-bot15" name="Id">
                                    @foreach (var item in Model)
 	{
-                                    <option value="@item.Id">@item</option>
+                                    <option value="@item.Id">@item.Title</option>
 	}
                                 </select>
                             </div>
@@ -28,12 +28,7 @@
                                 <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
                             </div>
                         </div>
-                        <div class="form-group">
-
-                            <div class="col-lg-10">
-                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
-                            </div>
-                        </div>
+                       
 
                         <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
