--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.SubService
 @using ConstructionSite.DTO.FrontViewModels.Testimonial 
+@using ConstructionSite.DTO.AdminViewModels.Image
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
 @using ConstructionSite.DTO.FrontViewModels.Blog
