--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -31,18 +31,18 @@
                             </div>
                             <div class="form-group ">
                                 <div class="col-lg-10">
-                                    <textarea placeholder="Tittle AZE" class="form-control " id="ccomment" name="TittleAz" required=""></textarea>
+                                    <input placeholder="Tittle AZE" class="form-control " id="ccomment" name="TittleAz" required="" />
                                 </div>
                             </div>
                             <div class="form-group ">
                                 <div class="col-lg-10">
-                                    <textarea placeholder="Tittle ENG" class="form-control " id="ccomment" name="TittleEn" required=""></textarea>
+                                    <input placeholder="Tittle ENG" class="form-control " id="ccomment" name="TittleEn" required="" />
                                 </div>
                             </div>
                             <div class="form-group ">
 
                                 <div class="col-lg-10">
-                                    <textarea placeholder="Tittle RU" class="form-control " id="ccomment" name="TittleRu" required=""></textarea>
+                                    <input placeholder="Tittle RU" class="form-control " id="ccomment" name="TittleRu" required="" />
                                 </div>
                             </div>
                             <div class="form-group">
