--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -15,41 +15,37 @@
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="ImageId" value="@Model.ImageId" />
                     <input type="hidden" name="id" value="@Model.id" />
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <input asp-for="NameAz" class="form-control " id="ccomment" placeholder="Name AZE" />
+                        </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <input asp-for="NameEn" class="form-control " id="ccomment" placeholder="Name ENG" />
+                        </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <input asp-for="NameRu" class="form-control " id="ccomment" placeholder="Name RU" />
+                        </div>
+                    </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control">
+                            <textarea type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleRu" id="f-name" class="form-control">
+                            <textarea type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control">
+                            <textarea type="text" asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
-
-                        <div class="col-lg-10">
-                            <textarea asp-for="NameAz" class="form-control " id="ccomment"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group ">
-
-                        <div class="col-lg-10">
-                            <textarea asp-for="NameRu" class="form-control " id="ccomment"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group ">
-
-                        <div class="col-lg-10">
-                            <textarea asp-for="NameEn" class="form-control " id="ccomment"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group ">
-
                         <div class="col-lg-10">
                             <img src="@Model.path" width="60" height="70" alt="Alternate Text" />
                         </div>
@@ -57,7 +53,7 @@
                     <div class="form-group">
 
                         <div class="col-lg-10">
-                            <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                            <input type="file" name="file" placeholder="Images" id="f-name" class="form-control" />
                         </div>
                     </div>
 
