--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -16,40 +16,33 @@
                     <div class="panel-body">
                         <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Add" method="post" enctype="multipart/form-data">
                             <div class="form-group">
-
                                 <div class="col-lg-10">
-                                    <input type="text" asp-for="NameAz" id="f-name" class="form-control" required="">
+                                    <input type="text" asp-for="NameAz" id="f-name" class="form-control" required="" placeholder="Name AZE">
                                 </div>
                             </div>
                             <div class="form-group">
-
                                 <div class="col-lg-10">
-                                    <input type="text" asp-for="NameRu" id="f-name" class="form-control">
+                                    <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name AZE">
                                 </div>
                             </div>
                             <div class="form-group">
-
                                 <div class="col-lg-10">
-                                    <input type="text" asp-for="NameEn" id="f-name" class="form-control">
-                                </div>
-                            </div>
-
-                            <div class="form-group ">
-
-                                <div class="col-lg-10">
-                                    <textarea class="form-control " id="ccomment" asp-for="ContentAz" required=""></textarea>
+                                    <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name AZE">
                                 </div>
                             </div>
                             <div class="form-group ">
-
                                 <div class="col-lg-10">
-                                    <textarea class="form-control " id="ccomment" asp-for="ContentRu" required=""></textarea>
+                                    <textarea class="form-control " id="ccomment" asp-for="ContentAz" required="" placeholder="Name AZE"></textarea>
                                 </div>
                             </div>
                             <div class="form-group ">
-
                                 <div class="col-lg-10">
-                                    <textarea class="form-control " id="ccomment" asp-for="ContentEn" required=""></textarea>
+                                    <textarea class="form-control " id="ccomment" asp-for="ContentEn" required="" placeholder="Name AZE"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group ">
+                                <div class="col-lg-10">
+                                    <textarea class="form-control " id="ccomment" asp-for="ContentRu" required="" placeholder="Name AZE"></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
