--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -10,6 +10,9 @@
             Project Table
         </header>
         <div class="panel-body">
+            <div class="button-create">
+                <a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" class="btn btn-primary">Create New About Element</a>
+            </div>
             <div class="adv-table editable-table ">
 
                 <div class="space15"></div>
