--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -44,8 +44,8 @@
                                 <td class=" ">@item.Content</td>
                                 <td class=" "><img width="50" height="60" src="@item.Imagepath" alt="Alternate Text" /></td>
                                 <td class=" ">@item.CreateDate</td>
-                                <td class="btn btn-primary"><a class="edit btn btn-primary" asp-route-id="@item.Id" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit">Edit</a></td>
-                                <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
+                                <td><a class="edit btn btn-primary" asp-route-id="@item.Id" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit">Edit</a></td>
+                                <td class=" "><a class="btn btn-danger delete delete-blog" data-id="@item.Id">Delete</a></td>
                             </tr>
                         }
                     </tbody>
@@ -54,3 +54,18 @@
         </div>
     </div>
 </section>
+
+@section scripts{
+    <script>
+        $(".delete-blog").click(function () {
+            var id = $(this).data("id");
+            $.ajax({
+                type: 'GET',
+                url: '/ConstructionAdmin/Blog/Delete/' + id,
+                success: function () {
+                    window.location.href ="/ConstructionAdmin/Blog"
+                }
+            })
+        });
+    </script>
+}
