--- a/ConstructionSite/Views/Shared/Components/Contact/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Contact/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContactViewModel
+﻿@model ContactIndexViewModel
  
     <div class="col-md-12">
         <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
