--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
@@ -26,7 +26,7 @@
     @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
     <script>
         $(document).ready(function () {
-            $(".delete-item").click(function () {
+            $(".delete-btn").click(function () {
                 alert("Salam");
             });
         });
