--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -44,7 +44,7 @@
                                 <td class=" ">@item.Tittle</td>
 
                                 <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
-                                <td class=" "><a class="edit" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
+                                <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
                                 <td class=" "><a class="btn btn-danger delete delete-about"  asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
                             </tr>
                         }
