--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -46,7 +46,7 @@
                                         <img width="100" height="100" src="@item.ImagePath" alt="Alternate Text" />
                                     </td>
 
-                                    <td class=" "><a class="edit" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
+                                    <td class=" "><a class="btn btn-primary edit" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
                                     <td class=" "><a class="btn btn-danger delete" asp-controller="SubService" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
                                 </tr>
                             }
@@ -56,3 +56,18 @@
             </div>
         </div>
     </section>
+
+@section scripts{
+<script>
+
+        $(".delete-about").click(function () {
+            var id = $(this).data("id");
+
+        $.ajax({
+            type: 'GET',
+            url: '/ConstructionAdmin/About/Delete/' + id
+
+        })
+        });
+</script>
+}
