--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -170,7 +170,7 @@
         <section id="contact" class="wprt-section">
             <div class="container">
                 <div class="row">
-                    @await Component.InvokeAsync("Contact")
+                    @*@await Component.InvokeAsync("Contact")*@
                     <!-- /.col-md-12 -->
 
                     
