--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
@@ -39,7 +39,7 @@
                             <tr class="odd">
 
                                 <td class=" ">@item.Name</td>
-                                <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
+                                <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
                                 <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
                             </tr>
                         }
