--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
@@ -35,6 +35,7 @@
     <div class="container">
         <form asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Login" method="post" class="form-signin">
             <div asp-validation-summary="ModelOnly" class="form-group mb-3"></div>
+            <input name="returnUrl" value="@ViewBag.returnUrl"/>
             @Html.AntiForgeryToken()
             <h2 class="form-signin-heading">Sign In Now</h2>
             <div class="login-wrap">
