--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
@@ -54,6 +54,7 @@
                     </p>
                 </div>
                 <button class="btn btn-lg btn-login btn-block" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-login btn-block" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create">Register</button>
             </div>
         </form>
     </div>
