--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
@@ -14,16 +14,13 @@
             </div>
 
             <a class="btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@admin.Id">Edit Admin Profile</a>
-            <a class="btn btn-danger delete-btn" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Delete" asp-route-id="@admin.Id">Delete Admin Profile</a>
+            <a class="btn btn-danger delete-btn" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Delete" asp-route-id="@admin.Id">Delete Profile</a>
 
             <hr />
         </div>
-
     }
 </div>
-@section scripts{
-
-    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
+@*@section scripts{
     <script>
         $(document).ready(function () {
             $(".delete-btn").click(function () {
@@ -32,4 +29,4 @@
         });
     </script>
 
-}
+}*@
