Stated_About_Controller

--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -151,11 +151,11 @@
 
 
 
-                    @await Component.InvokeAsync("Service")
+                    @*@await Component.InvokeAsync("Service")
                     @await Component.InvokeAsync("Portfolio")
                     @await Component.InvokeAsync("About")
 
-                    @await Component.InvokeAsync("Testimonial")
+                    @await Component.InvokeAsync("Testimonial")*@
 
 
                 </div>
