--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -53,9 +53,9 @@
         </div>
     </div>
 </section>
-@section scripts{
-    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
-    <script>
+<!--@section scripts{-->
+   
+    <!--<script>
 
         $(".delete-about").click(function () {
             var id = $(this).data("id");
@@ -67,4 +67,4 @@
         })
         });
     </script>
-}
+}-->
