--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
@@ -8,7 +8,7 @@
     }
 </style>
 
-<div class="text-danger" asp-validation-summary="All"></div>
+
 
 <section class="panel">
     <header class="panel-heading">
@@ -35,15 +35,24 @@
 
                     <tbody role="alert" aria-live="polite" aria-relevant="all">
 
-                        @foreach (var item in Model)
+                        @if (Model.Any())
+                        {
+                            @foreach (var item in Model)
+                            {
+                                <tr class="odd">
+
+                                    <td class="sorting_1">@item.Tittle</td>
+                                    <td class=" ">@item.Content</td>
+
+                                    <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
+                                    <td class=" "><a class="btn btn-danger" asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                </tr>
+                            }
+                        }
+                        else
                         {
                             <tr class="odd">
-
-                                <td class="sorting_1">@item.Tittle</td>
-                                <td class=" ">@item.Content</td>
-
-                                <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                <td class=" "><a class="btn btn-danger" asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                <td class="text-danger" asp-validation-summary="All">Hec bir Data yoxdur</td>
                             </tr>
                         }
                     </tbody>
@@ -60,11 +69,11 @@
         $(".delete-about").click(function () {
             var id = $(this).data("id");
 
-        $.ajax({
-            type: 'GET',
-            url: '/ConstructionAdmin/Description/Delete/' + id
+            $.ajax({
+                type: 'GET',
+                url: '/ConstructionAdmin/Description/Delete/' + id
 
-        })
+            })
         });
     </script>
 }
