--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
@@ -6,6 +6,10 @@
     .button-create {
         margin-bottom: 10px;
     }
+    .text-style {
+        text-align: center;
+        font-size: 1.2em;
+    }
 </style>
 
 
