--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -7,6 +7,10 @@
         .button-create {
             margin-bottom: 10px;
         }
+        .text-style {
+            text-align: center;
+            font-size: 1.2em;
+        }
     </style>
 
     <div class="text-danger" asp-validation-summary="All"></div>
