table  ucun id elave etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -7,6 +7,10 @@
     .button-create {
         margin-bottom: 10px;
     }
+    .text-style {
+        text-align: center;
+        font-size: 1.2em;
+    }
 </style>
 
 <div class="text-danger" asp-validation-summary="All"></div>
@@ -23,7 +27,7 @@
 
                 <div class="space15"></div>
                 <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
-                    <table class="table table-striped table-hover table-bordered dataTable" id="editable-sample" aria-describedby="editable-sample_info">
+                    <table class="table table-striped table-hover table-bordered dataTable" id="myTable editable-sample" aria-describedby="editable-sample_info">
                         <thead>
                             <tr role="row">
                                 <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Name</th>
@@ -35,19 +39,27 @@
                         </thead>
 
                         <tbody role="alert" aria-live="polite" aria-relevant="all">
+                            @if (Model.Any())
+                            {
+                                @foreach (var item in Model)
+                                {
+                                    <tr class="odd">
 
-                            @foreach (var item in Model)
+                                        <td class="sorting_1">@item.Name</td>
+                                        <td class=" ">@item.Content</td>
+                                        <td class="">
+                                            <img width="100" height="100" src="@item.ImagePath" alt="Alternate Text" />
+                                        </td>
+
+                                        <td class=" "><a class="btn btn-primary edit" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
+                                        <td class=" "><a class="btn btn-danger delete" asp-controller="SubService" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                    </tr>
+                                }
+                            }
+                            else
                             {
                                 <tr class="odd">
-
-                                    <td class="sorting_1">@item.Name</td>
-                                    <td class=" ">@item.Content</td>
-                                    <td class="">
-                                        <img width="100" height="100" src="@item.ImagePath" alt="Alternate Text" />
-                                    </td>
-
-                                    <td class=" "><a class="btn btn-primary edit" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                    <td class=" "><a class="btn btn-danger delete" asp-controller="SubService" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                    <td class="text-style text-danger" colspan="5" asp-validation-summary="All">Hec bir Data yoxdur</td>
                                 </tr>
                             }
                         </tbody>
