--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -27,7 +27,7 @@
 
             <div class="space15"></div>
             <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
-                <table class="table table-striped table-hover table-bordered dataTable" id="editable-sample" aria-describedby="editable-sample_info">
+                <table class="table table-striped table-hover table-bordered dataTable" id="myTable editable-sample" aria-describedby="editable-sample_info">
                     <thead>
                         <tr role="row">
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Name</th>
@@ -39,17 +39,25 @@
                     </thead>
 
                     <tbody role="alert" aria-live="polite" aria-relevant="all">
+                        @if (Model.Any())
+                        {
+                            @foreach (var item in Model)
+                            {
+                                <tr class="odd">
 
-                        @foreach (var item in Model)
+                                    <td class="sorting_1">@item.Name</td>
+                                    <td class=" ">@item.Tittle</td>
+
+                                    <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
+                                    <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
+                                    <td class=" "><a class="btn btn-danger delete delete-about" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                </tr>
+                            }
+                        }
+                        else
                         {
                             <tr class="odd">
-
-                                <td class="sorting_1">@item.Name</td>
-                                <td class=" ">@item.Tittle</td>
-
-                                <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
-                                <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                <td class=" "><a class="btn btn-danger delete delete-about"  asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                <td class="text-style text-danger" colspan="5" asp-validation-summary="All">Hec bir Data yoxdur</td>
                             </tr>
                         }
                     </tbody>
