--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -77,4 +77,10 @@
             })
         });
     </script>
+
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        })
+    </script>
 }
