--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -64,3 +64,11 @@
             </div>
         </div>
     </section>
+
+@section scripts{ 
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        })
+    </script>
+}
