Stated_SubService_views

--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -7,7 +7,7 @@
 @using ConstructionSite.DTO.FrontViewModels.Service
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.SubService
-@using ConstructionSite.DTO.FrontViewModels.Testimonial 
+@using ConstructionSite.DTO.AdminViewModels.Testimonial
 @using ConstructionSite.DTO.AdminViewModels.Image
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
