--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
@@ -1,5 +1,4 @@
-﻿<li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index">Profile</a></li>
-<li><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index">About</a></li>
+﻿<li><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index">About</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Index">Blog</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Index">Services</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Index">SubService</a></li>
