admin name-in rengini site-in ozunun renginde etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserDTO
 <div class="top-nav" style="padding-bottom: 56px;">
     <ul class="nav pull-right top-menu">
-        <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" style="padding: 5px; color:#fff">
+        <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" style="padding: 5px;color: #ffc925">
             <img src="~/ConstructionAdmin/img/profile-avatar.jpg" alt="" style="width: 25px; height:25px">
             @Model.Name
         </a>
